# ossa_scanner

./: .gitignore  README.md  cli.py  pyproject.toml  setup.cfg  setup.py  todo.txt
ossa/: scanner.py
ossa_reports/: ossa-20250116-1020-GeographicLib-doc.json  ossa-20250116-1169-FoXlibf-devel.json  ossa-20250116-1314-Agda.json  ossa-20250116-133-GMT-common.json  ossa-20250116-1338-HepMC3-devel.json  ossa-20250116-1759-389-ds-base.json  ossa-20250116-1766-AMF-devel.json  ossa-20250116-1773-IP2Location-data-sample.json  ossa-20250116-1795-MUMPS-common.json  ossa-20250116-1803-IP2Location.json  ossa-20250116-1843-CCfits-devel.json  ossa-20250116-1902-CUnit.json  ossa-20250116-2023-CFR.json  ossa-20250116-2036-HepMC3-search.json  ossa-20250116-2341-GraphicsMagick-devel.json  ossa-20250116-2424-HepMC3.json  ossa-20250116-2431-ImageMagick-devel.json  ossa-20250116-2478-389-ds-base-snmp.json  ossa-20250116-269-ImageMagick-djvu.json  ossa-20250116-2767-CGAL-devel.json  ossa-20250116-2829-3proxy.json  ossa-20250116-2829-6tunnel.json  ossa-20250116-292-CUnit.json  ossa-20250116-2937-389-ds-base.json  ossa-20250116-3153-389-ds-base-libs.json  ossa-20250116-3278-LibRaw.json  ossa-20250116-3439-GraphicsMagick.json  ossa-20250116-3542-GtkAda3-doc.json  ossa-20250116-3602-Judy.json  ossa-20250116-3638-ImageMagick-libs.json  ossa-20250116-373-HepMC3-protobufIO.json  ossa-20250116-3859-HepMC-devel.json  ossa-20250116-3860-GeographicLib-devel.json  ossa-20250116-3886-CharLS.json  ossa-20250116-4030-GMT-devel.json  ossa-20250116-4186-GtkAda3.json  ossa-20250116-4241-LibRaw.json  (+7695 more)
(+1246 files in other folders)
