[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossa"
version = "0.1.0"
description = "A Python library for scanning Linux packages and managing metadata."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Oscar Valenzuela", email = "oscar.valenzuela.b@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["linux", "packages", "SWHID", "GitHub", "open-source"]
dependencies = [
    "swh.model",
]
